--- a/index.html
+++ b/index.html
@@ -93,24 +93,24 @@
   <!-- concept-to-component starts  -->
   <section class="concept-to-component">
     <div class="container">
-      <div class="heading pb-5">
+      <div class="heading pb-md-5 pb-sm-2">
         <h2 class="section-heading">From Concept to Component</h2>
         <p class="sub-heading">Responsive Approach with Active Collaboration to deliver the right results</p>
       </div>
 
       <div class="component">
-        <div class="row g-5">
+        <div class="row g-3">
           <div class="col-md-4">
-            <div class="image pb-md-3 pb-sm-2">
+            <div class="image pb-md-3 pb-sm-3">
               <img src="images/form2concept/1.png" alt="Assemblies">
             </div>
             <div class="text">
               <h3 class="content-heading">Assemblies</h3>
-              <p class="content-text">Mechanical designs that fit. Learn the benefits of our assembly services.          </p>
+              <p class="content-text">Mechanical designs that fit. Learn the benefits of our assembly services.</p>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="image pb-md-3 pb-sm-2">
+            <div class="image pb-md-3 pb-sm-3">
               <img src="images/form2concept/2.png" alt="">
             </div>
             <div class="text">
@@ -119,7 +119,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="image pb-md-3 pb-sm-2">
+            <div class="image pb-md-3 pb-sm-3">
               <img src="images/form2concept/3.png" alt="Prototype Development">
             </div>
             <div class="text">
@@ -128,7 +128,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="image pb-md-3 pb-sm-2">
+            <div class="image pb-md-3 pb-sm-3">
               <img src="images/form2concept/4.png" alt="Design Consultation">
             </div>
             <div class="text">
@@ -172,9 +172,9 @@
           across industries</p>
       </div>
       
-      <div class="content py-5">
+      <div class="content py-md-5 py-sm-2">
         <div class="row text-center">
-          <div class="col-md-3">
+          <div class="col-md-3 pb-2">
             <div class="image">
               <img class="img-fluid" src="images/featured-industries/01.laser-optics.png" alt="">
             </div>
@@ -182,7 +182,7 @@
               <h3 class="content-heading">Optics & Photonics</h3>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 pb-2">
             <div class="image">
               <img class="img-fluid" src="images/featured-industries/02.th.png" alt="">
             </div>
@@ -190,7 +190,7 @@
               <h3 class="content-heading">Medical Instruments</h3>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 pb-2">
             <div class="image">
               <img class="img-fluid" src="images/featured-industries/03.robotic.png" alt="">
             </div>
@@ -198,7 +198,7 @@
               <h3 class="content-heading">Robotics</h3>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 pb-2">
             <div class="image">
               <img class="img-fluid" src="images/featured-industries/04.th-Copy.png" alt="">
             </div>
